[package]
name = "secrethitler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.8.0", features = ["full"] }
tokio-stream = "0.1.6"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
warp = "0.3.1"
